moved chart up to top

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,80 @@
                             </div>
                         </div>
                         <h5 class="text-center">Let fAI make money for you</h5>
-                        <div class="row" style="margin-top: 50px;margin-left: 10px;margin-right: 10px;">
+                        <div class="row" style="margin-top: 30px;margin-left: 10px;margin-right: 10px;">
+                            <div class="col">
+                                <!-- Start: Basic Card -->
+                                <div class="card shadow mb-4">
+                                    <div class="card-header py-3">
+                                        <h6 class="text-primary text-center m-0 font-weight-bold">That's how to make money with Deep-Reinforcement learning</h6>
+                                    </div>
+                                    <div class="card-body">
+                                        <!-- Start: Area Chart -->
+                                        <div class="chart-area">
+                                            <canvas id="myChart"></canvas>
+                                        </div>
+                                        <!-- End: Area Chart -->
+                                    </div>
+                                </div>
+                                <!-- End: Basic Card -->
+                            </div>
+                        </div>
+                        <div class="row" style="margin-top: 0px;margin-left: 10px;margin-right: 10px;">
+                            <div class="col">
+                                <!-- Start: Basic Card -->
+                                <div class="card shadow mb-4">
+                                    <div class="card-header py-3">
+                                        <h6 class="text-primary m-0 font-weight-bold">Return of example</h6>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col">
+                                                <!-- Start: Card Primary -->
+                                                <div class="card shadow border-left-primary py-2 m-0 mr-2">
+                                                    <div class="card-body">
+                                                        <div class="row align-items-center no-gutters">
+                                                            <div class="col mr-2">
+                                                                <div class="text-uppercase text-primary font-weight-bold text-xs mb-1">
+                                                                    <span>Earnings (monthly)</span></div>
+                                                                <div class="text-dark font-weight-bold h5 mb-0">
+                                                                    <span>5,04%</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-auto"><i
+                                                                    class="fas fa-calendar fa-2x text-gray-300"></i>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- End: Card Primary -->
+                                            </div>
+                                            <div class="col">
+                                                <!-- Start: Card Success -->
+                                                <div class="card shadow border-left-success py-2 m-0 mr-2">
+                                                    <div class="card-body">
+                                                        <div class="row align-items-center no-gutters">
+                                                            <div class="col mr-2">
+                                                                <div class="text-uppercase text-success font-weight-bold text-xs mb-1">
+                                                                    <span>Earnings (annual)</span></div>
+                                                                <div class="text-dark font-weight-bold h5 mb-0">
+                                                                    <span>64,32%</span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-auto"><i
+                                                                    class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- End: Card Success -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- End: Basic Card -->
+                            </div>
+                        </div>
+                        <div class="row" style="margin-left: 10px;margin-right: 10px;">
                             <div class="col">
                                 <!-- Start: Basic Card -->
                                 <div class="card shadow mb-4">
@@ -23,9 +96,11 @@
                                         <h6 class="text-primary m-0 font-weight-bold">Why trust us?</h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="m-0">Our Startup has financial and AI experts that work together to build an financial Artificial Intelligence that trades
-                                        better than most humans do. The Algorithms that we us are strongly tested on Data that the AI has never seen befor,
-                                        so we make sure that our AI makes money in the future!</p>
+                                        <p class="m-0">Our Startup has financial and AI experts that work together to
+                                            build an financial Artificial Intelligence that trades
+                                            better than most humans do. The Algorithms that we us are strongly tested on
+                                            Data that the AI has never seen befor,
+                                            so we make sure that our AI makes money in the future!</p>
                                     </div>
                                 </div>
                                 <!-- End: Basic Card -->
@@ -37,9 +112,12 @@
                                         <h6 class="text-primary m-0 font-weight-bold">Why is AI better than humans?</h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="m-0">The big problem with humans is that they tend to get emotional about stuff.
-                                        That is where the AI has its advantages. It always thinks abstract and has no emotions.
-                                        But also it gets never tired and always does the best it can to make money for you!</p>
+                                        <p class="m-0">The big problem with humans is that they tend to get emotional
+                                            about stuff.
+                                            That is where the AI has its advantages. It always thinks abstract and has
+                                            no emotions.
+                                            But also it gets never tired and always does the best it can to make money
+                                            for you!</p>
                                     </div>
                                 </div>
                                 <!-- End: Basic Card -->
@@ -53,9 +131,11 @@
                                         <h6 class="text-primary m-0 font-weight-bold">How does it work</h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="m-0">We us Deep-Q-Learning, which is a type of reinforcement learning. We have an Agent,
-                                        which is an Deep Neural Network, that we train on over 20 years of Stock data. If it performs great, the AI
-                                        is tested on one Year that it has never seen before.</p>
+                                        <p class="m-0">We us Deep-Q-Learning, which is a type of reinforcement learning.
+                                            We have an Agent,
+                                            which is an Deep Neural Network, that we train on over 20 years of Stock
+                                            data. If it performs great, the AI
+                                            is tested on one Year that it has never seen before.</p>
                                     </div>
                                 </div>
                                 <!-- End: Basic Card -->
@@ -68,72 +148,11 @@
                                             FREE</h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="m-0">You want to see how good our algorithm is? then check out the example below! If that convinces you,
-                                        you can sing up for free and check out all kinds of Stocks and how our AI would perform. To get an E-mail each time
-                                        our AI buys or sells an stock, it costs $1 per month per stock.</p>
-                                    </div>
-                                </div>
-                                <!-- End: Basic Card -->
-                            </div>
-                        </div>
-                        <div class="row" style="margin-top: 0px;margin-left: 10px;margin-right: 10px;">
-                            <div class="col">
-                                <!-- Start: Basic Card -->
-                                <div class="card shadow mb-4">
-                                    <div class="card-header py-3">
-                                        <h6 class="text-primary m-0 font-weight-bold">Example</h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <!-- Start: Area Chart -->
-                                        <div class="chart-area">
-                                            <canvas id="myChart"></canvas>
-                                       </div>
-                                        <!-- End: Area Chart -->
-                                    </div>
-                                </div>
-                                <!-- End: Basic Card -->
-                            </div>
-                            <div class="col">
-                                <!-- Start: Basic Card -->
-                                <div class="card shadow mb-4">
-                                    <div class="card-header py-3">
-                                        <h6 class="text-primary m-0 font-weight-bold">Return of example</h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <!-- Start: Card Primary -->
-                                        <div class="card shadow border-left-primary py-2">
-                                            <div class="card-body">
-                                                <div class="row align-items-center no-gutters">
-                                                    <div class="col mr-2">
-                                                        <div class="text-uppercase text-primary font-weight-bold text-xs mb-1">
-                                                            <span>Earnings (monthly)</span></div>
-                                                        <div class="text-dark font-weight-bold h5 mb-0">
-                                                            <span>5,04%</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-auto"><i
-                                                            class="fas fa-calendar fa-2x text-gray-300"></i></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End: Card Primary -->
-                                        <!-- Start: Card Success -->
-                                        <div class="card shadow border-left-success py-2" style="margin-top: 20px;">
-                                            <div class="card-body">
-                                                <div class="row align-items-center no-gutters">
-                                                    <div class="col mr-2">
-                                                        <div class="text-uppercase text-success font-weight-bold text-xs mb-1">
-                                                            <span>Earnings (annual)</span></div>
-                                                        <div class="text-dark font-weight-bold h5 mb-0">
-                                                            <span>64,32%</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-auto"><i
-                                                            class="fas fa-dollar-sign fa-2x text-gray-300"></i></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End: Card Success -->
+                                        <p class="m-0">You want to see how good our algorithm is? then check out the
+                                            example below! If that convinces you,
+                                            you can sing up for free and check out all kinds of Stocks and how our AI
+                                            would perform. To get an E-mail each time
+                                            our AI buys or sells an stock, it costs $1 per month per stock.</p>
                                     </div>
                                 </div>
                                 <!-- End: Basic Card -->
