Added button to subscribe, button only show if not subscribed

--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -98,8 +98,7 @@
                         <!-- Start: #share -->
                         <h3 id="share_name" class="text-dark mb-0">{{ name }}</h3>
                         <!-- End: #share --><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button"
-                                               href="#"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate
-                        Report</a></div>
+                                               href="subscribe" id="subscribe-button"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Subscribe</a></div>
                     <!-- Start: Chart -->
                     <div class="row">
                         <div class="col">
