Added alerts to login and register

--- a/templates/register.html
+++ b/templates/register.html
@@ -27,6 +27,8 @@
                                     Account
                                 </button>
                                 <hr>
+                            <div class="alert alert-danger" id="alert" role="alert">
+                                    </div>
                             <div class="text-center"><a class="small" href="forgot-password">Forgot Password?</a>
                             </div>
                             <div class="text-center"><a class="small" href="login">Already have an account?
