--- a/templates/login.html
+++ b/templates/login.html
@@ -7,32 +7,48 @@
                     <div class="card-body p-0">
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-flex">
-                                <div class="flex-grow-1 bg-login-image" style="background-image: url('../static/assets/img/dogs/image3.jpeg?h=cbc3a40dae521ddee89bf6b026abde71');"></div>
+                                <div class="flex-grow-1 bg-login-image"
+                                     style="background-image: url('../static/assets/img/dogs/image3.jpeg?h=cbc3a40dae521ddee89bf6b026abde71');"></div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">Welcome Back!</h4>
                                     </div>
-{#                                    <form class="user">#}
-                                        <div class="form-group">
-                                            <!-- Start: #username_login --><input class="form-control form-control-user" type="text" id="login-user" name="username" placeholder="Username">
-                                            <!-- End: #username_login -->
+                                    {#                                    <form class="user">#}
+                                    <div class="form-group">
+                                        <!-- Start: #username_login --><input class="form-control form-control-user"
+                                                                              type="text" id="login-user"
+                                                                              name="username" placeholder="Username">
+                                        <!-- End: #username_login -->
+                                    </div>
+                                    <div class="form-group">
+                                        <!-- Start: #password_login --><input class="form-control form-control-user"
+                                                                              type="password" id="login-pass"
+                                                                              placeholder="Password" name="password">
+                                        <!-- End: #password_login -->
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <div class="form-check"><input class="form-check-input custom-control-input"
+                                                                           type="checkbox" id="formCheck-1"><label
+                                                    class="form-check-label custom-control-label" for="formCheck-1">Remember
+                                                Me</label></div>
                                         </div>
-                                        <div class="form-group">
-                                            <!-- Start: #password_login --><input class="form-control form-control-user" type="password" id="login-pass" placeholder="Password" name="password">
-                                            <!-- End: #password_login -->
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1">Remember Me</label></div>
-                                            </div>
-                                        </div><button class="btn btn-primary btn-block text-white btn-user" type="submit" id="login-button">Login</button>
-                                        <hr>
-{#                                    </form>#}
-                                    <div class="text-center"><a class="small" href="forgot-password">Forgot Password?</a></div>
-                                    <div class="text-center"><a class="small" href="register">Create an Account!</a></div>
-                                    <div class="text-center"><a class="small" href="landing">Want to learn more about us?</a></div>
+                                    </div>
+                                    <button class="btn btn-primary btn-block text-white btn-user" type="submit"
+                                            id="login-button">Login
+                                    </button>
+                                    <hr>
+                                    <div class="alert alert-danger" id="alert" role="alert">
+                                    </div>
+                                    {#                                    </form>#}
+                                    <div class="text-center"><a class="small" href="forgot-password">Forgot
+                                        Password?</a></div>
+                                    <div class="text-center"><a class="small" href="register">Create an Account!</a>
+                                    </div>
+                                    <div class="text-center"><a class="small" href="landing">Want to learn more about
+                                        us?</a></div>
                                 </div>
                             </div>
                         </div>
