Added Cancel Subscription to profile Added images to landing page

--- a/templates/home.html
+++ b/templates/home.html
@@ -163,8 +163,8 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="m-0">You want to see how good our algorithm is? Check out all kinds of Stocks and how our AI would perform by searching the
-                                        the short name of the stock(Apple = AAPL). To get an E-mail each time
-                                        our AI buys or sells an stock, it costs $1 per month per stock.</p>
+                                        the short name of the stock(Apple = AAPL). To see the trades till today each time
+                                        our AI buys or sells an stock, it costs $1 per month.</p>
                                 </div>
                             </div>
                             <!-- End: Basic Card -->
