--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,16 @@
                     <div class="card-body p-0">
                         <div class="row">
                             <div class="col">
-                                <div style="margin: 20px;">
+                                <div style="margin: 20px;" class="row">
+                                    <img class="text-center" src="../static/assets/img/avatars/Aktie03neu.png" style="max-width: 40px; max-height: 40px; margin-right: 40px">
                                     <h1 class="text-center"
-                                        style="font-size: 60px;color: rgb(85,85,85);font-family: Nunito, sans-serif;">
+                                        style="font-size: 40px;color: rgb(85,85,85);font-family: Nunito, sans-serif;">
                                         financial Advisory Intelligence</h1>
                                 </div>
                             </div>
                         </div>
-                        <h5 class="text-center">Let fAI make money for you</h5>
+                        <img src="../static/assets/img/avatars/Aktie01neu.jpg" style='height: 100%; width: 100%; object-fit: contain'>
+                        <!-- <h5 class="text-center">Let fAI make money for you</h5> -->
                         <div class="row" style="margin-top: 30px;margin-left: 10px;margin-right: 10px;">
                             <div class="col">
                                 <!-- Start: Basic Card -->
@@ -151,8 +153,8 @@
                                         <p class="m-0">You want to see how good our algorithm is? then check out the
                                             example below! If that convinces you,
                                             you can sing up for free and check out all kinds of Stocks and how our AI
-                                            would perform. To get an E-mail each time
-                                            our AI buys or sells an stock, it costs $1 per month per stock.</p>
+                                            would perform. To see the trades till today each time
+                                            our AI buys or sells an stock, it costs $1 per month.</p>
                                     </div>
                                 </div>
                                 <!-- End: Basic Card -->
