--- a/templates/profile.html
+++ b/templates/profile.html
@@ -177,6 +177,27 @@
                                     </div>
                                 </div>
                             </div>
+                            {% if user.subscription == true %}
+                            <div class="row">
+                                <div class="col">
+                                    <div class="card shadow mb-3">
+                                        <div class="card-header py-3">
+                                            <p class="text-primary m-0 font-weight-bold">Subscription</p>
+                                        </div>
+                                        <div class="card-body">
+                                                <div class="form-row">
+                                                        <div class="form-group"><label for="old_pw"><strong>
+                                                            A Subscription is $0.99/Month</strong><br></label>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <a class="btn btn-primary btn-sm" role="button"
+                                               href="subscribe" id="subscribe-button"><i class="fas fa-download fa-sm text-white-50"></i>Cancel Subscription</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
