--- a/templates/profile.html
+++ b/templates/profile.html
@@ -187,12 +187,9 @@
                                         <div class="card-body">
                                                 <div class="form-row">
                                                         <div class="form-group"><label for="old_pw"><strong>
-                                                            A Subscription is $0.99/Month</strong><br></label>
+                                                            You have payed the subscription fee till {{ user.sub_date }}</strong><br></label>
                                                     </div>
                                                 </div>
-                                                <div class="form-group">
-                                                    <a class="btn btn-primary btn-sm" role="button"
-                                               href="subscribe" id="subscribe-button"><i class="fas fa-download fa-sm text-white-50"></i>Cancel Subscription</a></div>
                                         </div>
                                     </div>
                                 </div>
