Added frontend for displaying return

--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -151,15 +151,15 @@
                     </div>
                     <!-- End: Chart -->
                     <div class="row">
-                        <div class="col-md-6 col-xl-3 mb-4">
+                        <div class="col-md-6 col-xl-3 mb-5">
                             <div class="card shadow border-left-primary py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
-                                        <div class="col mr-2">
+                                        <div class="col mr-3">
                                             <div class="text-uppercase text-primary font-weight-bold text-xs mb-1">
-                                                <span>Earnings (monthly)</span>
+                                                <span>Earnings (fAI)</span>
                                             </div>
-                                            <div class="text-dark font-weight-bold h5 mb-0"><span>5,04%</span></div>
+                                            <div class="text-dark font-weight-bold h5 mb-0"><span id="return-fai"></span></div>
                                         </div>
                                         <div class="col-auto"><i class="fas fa-calendar fa-2x text-gray-300"></i>
                                         </div>
@@ -167,15 +167,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
+                        <div class="col-md-6 col-xl-3 mb-5">
                             <div class="card shadow border-left-success py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
-                                        <div class="col mr-2">
+                                        <div class="col mr-3">
                                             <div class="text-uppercase text-success font-weight-bold text-xs mb-1">
-                                                <span>Earnings (annual)</span>
+                                                <span>Earnings (1 x Investment)</span>
                                             </div>
-                                            <div class="text-dark font-weight-bold h5 mb-0"><span>64,32%</span>
+                                            <div class="text-dark font-weight-bold h5 mb-0"><span id="return-holding"></span>
                                             </div>
                                         </div>
                                         <div class="col-auto"><i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
